--- a/landing_page/Landing_Page.css
+++ b/landing_page/Landing_Page.css
@@ -571,6 +571,13 @@ body {
     border: 4px solid var(--color-dark);
 }
 
+.team-photo img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
 .team-member h4 {
     font-size: 1.3rem;
     font-weight: 700;
