--- a/landing_page/Landing_Page.css
+++ b/landing_page/Landing_Page.css
@@ -135,15 +135,15 @@ body {
     padding: 80px 0;
 }
 
-.feature-section-title {
+.section-title {
     font-size: 2.5rem;
     font-weight: 700;
     text-align: center;
     color: var(--color-dark);
-    margin-bottom: 1rem;
+    margin-bottom: 3rem;
 }
 
-.feature-section-subtitle {
+.section-subtitle {
     text-align: center;
     color: #666;
     max-width: 1000px;
@@ -232,22 +232,28 @@ body {
     font-weight: 600;
 }
 
+.about-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 20px;
+}
 /* Features Carousel */
 
 .slider-section {
-    padding: 80px 0;
+    padding: 10px 0;
     overflow: hidden;
 }
 
-.section-title {
+.feature-section-title {
     font-size: 2.5rem;
     font-weight: 700;
     color: var(--maroon);
-    margin-bottom: 1rem;
+    margin-bottom: 3rem;
     text-align: center;
 }
 
-.section-subtitle {
+.feature-section-subtitle {
     text-align: center;
     color: #666;
     margin-bottom: 4rem;
