--- a/landing_page/Landing_Page.css
+++ b/landing_page/Landing_Page.css
@@ -436,6 +436,10 @@ body {
 
 /* Responsive */
 @media (max-width: 992px) {
+    .nav-link{
+        margin-top: 20px;
+    }
+
     .slider-card {
         width: 320px;
         height: 320px;
@@ -450,8 +454,8 @@ body {
     }
 
     .slider-nav {
-        width: 50px;
-        height: 50px;
+        width: 20px;
+        height: 20px;
     }
 
     .card-title {
@@ -460,13 +464,18 @@ body {
 }
 
 @media (max-width: 768px) {
+
+    .nav-link{
+        margin-top: 20px;
+    }
+    
     .slider-container {
         height: 400px;
     }
 
     .slider-card {
-        width: 280px;
-        height: 280px;
+        width: 260px;
+        height: 300px;
     }
 
     .slider-card.left-card,
@@ -492,8 +501,8 @@ body {
     }
 
     .slider-nav {
-        width: 40px;
-        height: 40px;
+        width: 20px;
+        height: 20px;
     }
 }
 
@@ -671,7 +680,12 @@ body {
 
 @media (max-width: 768px) {
     .hero-content h1 {
+        margin-top: -4rem;
         font-size: 2rem;
+    }
+
+    .hero-image{
+        margin-top: 3rem;
     }
 
     .team-grid {
