--- a/landing_page/Landing_Page.css
+++ b/landing_page/Landing_Page.css
@@ -220,25 +220,6 @@ body {
     font-size: 1.05rem;
 }
 
-.about-image {
-    background-color: var(--color-accent2);
-    height: 300px;
-    border-radius: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: var(--color-dark);
-    font-size: 1.2rem;
-    font-weight: 600;
-}
-
-.about-image img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 20px;
-}
-
 /* Features Carousel */
 
 .slider-section {
@@ -786,7 +767,7 @@ body {
 
 .about-image {
     background-color: var(--color-accent2);
-    height: 300px;
+    height: 400px;
     border-radius: 20px;
     display: flex;
     align-items: center;
@@ -806,7 +787,7 @@ body {
 .about-image img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: fill;
     border-radius: 20px;
     transition: transform 0.3s;
 }
